# voicelistener

./: build.gradle  push.sh  settings.gradle  test-before-aapt2.sh
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: whisper_jni.cpp
app/src/main/java/com/micklab/voicelistener/: BootReceiver.java  DefaultSpeechRecognizerEngineFactory.kt  EngineType.kt  LiveSummaryState.java  LiveSummaryStore.java  LogManager.java  LogManager2.java  MainActivity.java  NoOpOfflineAsrEngine.java  NoOpSpeechRecognizerEngine.kt  OfflineAsrEngine.java  OllamaClient.java  OllamaDebugActivity.java  OllamaDebugState.java  PendingSummaryBuffer.java  RecognitionTraceContext.java  SpeechRecognitionPreferences.kt  SpeechRecognizerConfig.kt  SpeechRecognizerEngine.kt  SpeechRecognizerEngineFactory.kt  SpeechRecognizerFacade.kt  SummaryActivity.java  SummaryTextFormatter.java  VoiceActivityDetector.java  VoiceListenerService.java  VoskEngine.kt  VoskOfflineAsrEngine.java  WhisperEngine.kt  WhisperModelAssetInstaller.kt  WhisperModelManager.kt  WhisperPerfLogger.java  WhisperRecognitionBuffer.java
app/src/test/java/com/micklab/voicelistener/: LiveSummaryStateTest.java  OllamaClientTest.java  OllamaDebugStateTest.java  PendingSummaryBufferTest.java  RecognitionTraceContextTest.java  VoiceActivityDetectorTest.java  WhisperModelManagerTest.java  WhisperRecognitionBufferTest.java
